# riri-imgui-hook

./: .gitignore  BuildReloadedMod.ps1  Cargo.toml  LICENSE  README.md
riri-imgui-hook/: Cargo.toml
riri-imgui-hook-globals/: Cargo.toml  build.rs
riri-imgui-hook-globals/src/: globals.rs  lib.rs
riri-imgui-hook-proc/: Cargo.toml
riri-imgui-hook-proc-impl/: Cargo.toml
riri-imgui-hook-proc-impl/src/: create_static.rs  lib.rs
riri-imgui-hook-proc/src/: lib.rs
riri-imgui-hook-reloaded/: Cargo.toml  build.rs
riri-imgui-hook-reloaded/data/: hashes.toml  package.toml
riri-imgui-hook-reloaded/src/: backend.rs  d3d11.rs  d3d12.rs  lib.rs  start.rs
riri-imgui-hook-reloaded/src/d3d11_impl/: backup.rs  devices.rs  font.rs
riri-imgui-hook-reloaded/src/win32_impl/: init.rs
riri-imgui-hook/src/: config.rs  globals.rs  lib.rs  registry.rs
riri-imgui-hook/src/d3d11_impl/: backup.rs  buffer.rs  devices.rs  font.rs  init.rs  ps_srgb.dxbc  ps_srgb.hlsl  shader.rs  state.rs
riri-imgui-hook/src/d3d12_impl/: buffer.rs  font.rs  init.rs  pipeline.rs  ps.dxbc  ps_srgb.dxbc  signature.rs  state.rs  vs.dxbc
riri-imgui-hook/src/win32_impl/: state.rs  window.rs
riri.imguihookex/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  riri.imguihookex.csproj  riri.imguihookex.sln
riri.imguihookex/Template/: ModBase.cs  ModContext.cs  Startup.cs
riri.imguihookex/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
