[workspace]
resolver = "2"
members = [ 
    "riri-imgui-hook", 
    "riri-imgui-hook-globals", 
    "riri-imgui-hook-proc", 
    "riri-imgui-hook-proc-impl",
    "riri-imgui-hook-reloaded"
]

[workspace.package]
version = "0.2.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/riri-imgui-hook"
license-file = "LICENSE"
edition = "2021"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.

# Release Build with Debug Info
[profile.release-debug]
inherits = "release"
debug = true # Allow us to debug using LLDB
strip = "none"