[package]
name = "riri-imgui-hook-globals"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
riri-imgui-hook = { path = "../riri-imgui-hook" }
riri-imgui-hook-proc = { path = "../riri-imgui-hook-proc" }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }

[build-dependencies]
riri-imgui-hook-proc-impl = { path = "../riri-imgui-hook-proc-impl" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
