[package]
name = "riri-imgui-hook"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
glam = "0.30.1"
imgui = { version = "0.12.0", features = ["docking"] }
riri-mod-tools-proc = { path = "../../riri-mod-tools/riri-mod-tools-proc" }
riri-mod-tools-rt = { path = "../../riri-mod-tools/riri-mod-tools-rt" }
windows-core = "0.61.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]