[package]
name = "riri-imgui-hook"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.6"
glam = "0.30.1"
imgui = { git = "https://github.com/rirurin/imgui-rs", features = ["docking", "tables-api"] }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools" }
windows-core = "0.61.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Foundation",
]